--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,22 @@
         <spotbugs.threshold>Low</spotbugs.threshold>
     </properties>
 
+         <dependencies>
+    <!-- PMD -->
+    <dependency>
+        <groupId>net.sourceforge.pmd</groupId>
+        <artifactId>pmd-core</artifactId>
+        <version>6.41.0</version>
+    </dependency>
+
+    <!-- Checkstyle -->
+    <dependency>
+        <groupId>com.puppycrawl.tools</groupId>
+        <artifactId>checkstyle</artifactId>
+        <version>8.42</version>
+    </dependency>
+</dependencies>
+
     <build>
         <plugins>
             <!-- PMD -->
@@ -47,13 +63,6 @@
                     </execution>
                 </executions>
             </plugin>
-                  <plugins>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-surefire-plugin</artifactId>
-          <version>2.19.1</version>
-        </plugin>
-  </plugins>
         </plugins>
     </build>
 </project>
