--- a/pom.xml
+++ b/pom.xml
@@ -17,14 +17,14 @@
     </properties>
 
          <dependencies>
-    <!-- PMD -->
+    <!-- PMD dependency -->
     <dependency>
         <groupId>net.sourceforge.pmd</groupId>
         <artifactId>pmd-core</artifactId>
         <version>6.41.0</version>
     </dependency>
 
-    <!-- Checkstyle -->
+    <!-- Checkstyle dependency -->
     <dependency>
         <groupId>com.puppycrawl.tools</groupId>
         <artifactId>checkstyle</artifactId>
@@ -34,7 +34,7 @@
 
     <build>
         <plugins>
-            <!-- PMD -->
+            <!-- PMD plugin -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-pmd-plugin</artifactId>
@@ -49,7 +49,7 @@
                 </executions>
             </plugin>
 
-            <!-- Checkstyle -->
+            <!-- Checkstyle plugin -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-checkstyle-plugin</artifactId>
@@ -66,7 +66,7 @@
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>findbugs-maven-plugin</artifactId>
-                <version>3.0.5</version> <!-- Use the latest version available -->
+                <version>3.0.5</version>
 
                 <executions>
                     <execution>
