--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,18 @@
 </dependencies>
 
     <build>
+<!-- spot bugs plugin -->
+<reporting>
+    <plugins>
+      <plugin>
+        <groupId>com.github.spotbugs</groupId>
+        <artifactId>spotbugs-maven-plugin</artifactId>
+        <version>4.8.1.0</version>
+      </plugin>
+    </plugins>
+  </reporting>
+
+             
         <plugins>
             <!-- PMD plugin -->
             <plugin>
