--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,14 @@
 
     <build>       
         <plugins>
+
+         <!-- surefire -->
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-surefire-plugin</artifactId>
+          <version>3.2.2</version>
+        </plugin>
+
             <!-- PMD plugin -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
